--- a/app/src/main/res/layout/activity_product.xml
+++ b/app/src/main/res/layout/activity_product.xml
@@ -1,5 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
-<layout>
+<layout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools">
+
     <data>
         <variable
             name="product"
@@ -9,9 +12,8 @@
             name="viewModel"
             type="br.com.italents.deliveryapp.ui.viewmodels.RegisterProductViewModel" />
     </data>
-    <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
-        xmlns:app="http://schemas.android.com/apk/res-auto"
-        xmlns:tools="http://schemas.android.com/tools"
+
+    <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:background="#F3EDED"
@@ -54,8 +56,8 @@
             android:layout_width="33dp"
             android:layout_height="33dp"
             android:layout_marginTop="10dp"
-            android:onClick="@{() -> viewModel.decrementQuantity(product)}"
             android:background="@drawable/ic_remove"
+            android:onClick="@{() -> viewModel.decrementQuantity(product)}"
             app:layout_constraintStart_toStartOf="@id/imageOfProduct"
             app:layout_constraintTop_toBottomOf="@id/imageOfProduct" />
 
@@ -64,8 +66,8 @@
             android:layout_width="33dp"
             android:layout_height="33dp"
             android:layout_marginTop="10dp"
-            android:onClick="@{() -> viewModel.incrementQuantity(product)}"
             android:background="@drawable/ic_add"
+            android:onClick="@{() -> viewModel.incrementQuantity(product)}"
             app:layout_constraintEnd_toEndOf="@id/imageOfProduct"
             app:layout_constraintTop_toBottomOf="@id/imageOfProduct" />
 
@@ -125,35 +127,38 @@
 
         <Button
             android:id="@+id/btnDeleteProduct"
-            android:layout_width="match_parent"
+            android:layout_width="200dp"
             android:layout_height="85dp"
-            android:layout_marginTop="15dp"
             android:backgroundTint="@color/design_default_color_error"
-            android:text="Excluir produto"
-            android:textAllCaps="true"
-            android:textSize="17sp"
-            app:layout_constraintBottom_toTopOf="@id/btnAddToCart"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent" />
-
-        <Button
-            android:id="@+id/btnAddToCart"
-            android:layout_width="match_parent"
-            android:layout_height="85dp"
-            android:layout_marginTop="15dp"
-            android:backgroundTint="#FFA500"
-            android:text="Adicionar ao carrinho"
+            android:text="Excluir"
             android:textAllCaps="true"
             android:textSize="17sp"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintHorizontal_bias="0.5"
+            app:layout_constraintStart_toEndOf="@+id/btnAddToCart" />
+
+        <Button
+            android:id="@+id/btnAddToCart"
+            android:layout_width="200dp"
+            android:layout_height="85dp"
+            android:backgroundTint="#FFA500"
+            android:text="Adicionar"
+            android:textAllCaps="true"
+            android:textSize="17sp"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toStartOf="@+id/btnDeleteProduct"
+            app:layout_constraintHorizontal_bias="0.5"
+            app:layout_constraintHorizontal_chainStyle="spread"
             app:layout_constraintStart_toStartOf="parent" />
 
         <ImageView
+            android:id="@+id/icFavorite"
             android:layout_width="40dp"
             android:layout_height="40dp"
             android:layout_marginEnd="10dp"
-            android:background="@drawable/ic_favorite_empty"
+            android:background="@{product.isFavorite ? @drawable/ic_favorite : @drawable/ic_favorite_empty}"
+            android:onClick="@{() -> viewModel.handleFavorite(!product.isFavorite, product)}"
             app:layout_constraintBottom_toBottomOf="@id/nameProduct"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintTop_toTopOf="@id/nameProduct" />
